Added hints and preface for each challenge

--- a/web/templates/agency/base.html
+++ b/web/templates/agency/base.html
@@ -39,6 +39,7 @@
     <link href="{{ url_for('static', filename='stylesheets/scenic/style.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='stylesheets/scenic/responsive.css') }}" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/sidebar/style.css') }}">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -54,6 +55,8 @@
 
 	<script src="{{ url_for('static', filename='scripts/login.js') }}"></script>  
 	<script src="{{ url_for('static', filename='scripts/sidebar.js') }}"></script>  
+    <script src="{{ url_for('static', filename='scripts/hints.js') }}"></script>  
+    <script src="{{ url_for('static', filename='scripts/modal.js') }}"></script>  
 
 
 
@@ -200,28 +203,28 @@
                 <li class="search-box">
                     <!-- <i class='bx bx-search icon'></i>
                     <input type="text" placeholder="Search..."> -->
-                    <a href="#">
+                    <a class="hint-btn">
                         <i class='bx bx-search icon' ></i>
                         <span class="text nav-text">Get a Hint!</span>
                     </a>
                 </li>
 
-                    <li class="nav-link">
-                        <a href="#">
+                    <li class="nav-link" id="hint-1">
+                        <a data-modal="modal-1" class="modal-open">      
                             <i class='bx bx-bell icon' ></i>
                             <span class="text nav-text">Hint 1</span>
                         </a>
                     </li>
 
-                    <li class="nav-link">
-                        <a href="#">
+                    <li class="nav-link" id="hint-2">
+                        <a data-modal="modal-2" class="modal-open">      
                             <i class='bx bx-bell icon' ></i>
                             <span class="text nav-text">Hint 2</span>
                         </a>
                     </li>
 
-                    <li class="nav-link">
-                        <a href="#">
+                    <li class="nav-link" id="hint-3">
+                        <a data-modal="modal-3" class="modal-open">
                             <i class='bx bx-bell icon' ></i>
                             <span class="text nav-text">Hint 3</span>
                         </a>
@@ -255,6 +258,44 @@
         </div>
 
     </nav>
+
+    {%block modals%} 
+	<div class="modal-bg" id="modal-1" data-backdrop="static" >
+        <div class="modal-content">
+            <div class="modal-header">
+                <button class="icon modal-close"><i class="material-icons" style="font-size: 16px;">close</i></button>
+                <h3>Hint 1</h3> 
+            </div>
+            <div class="modal-body">
+                {%block hint1%}<h4>Is there a way to escape the query?</h4>{%endblock%}
+            </div>
+        </div>
+    </div>
+
+    <div class="modal-bg" id="modal-2" data-backdrop="static">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button class="icon modal-close"><i class="material-icons" style="font-size: 16px;">close</i></button>
+                <h3>Hint 2</h3>
+            </div>
+            <div class="modal-body">
+                {%block hint2%}<h4>How do we ensure that the query is always true?</h4>{%endblock%}
+            </div>
+        </div>
+    </div>
+
+    <div class="modal-bg" id="modal-3" data-backdrop="static">
+        <div class="modal-content">
+            <div class="modal-header"> 
+                <button class="icon modal-close"><i class="material-icons" style="font-size: 16px;">close</i></button>
+                <h3>Hint 3</h3>
+            </div>
+            <div class="modal-body">
+                {%block hint3%}<h4>What is the syntax to comment out any trailing query?</h4>{%endblock%}
+            </div>
+        </div>
+    </div>    
+    {%endblock%} 
   
 </body>
 </html>
