--- a/web/templates/ext/agencylogin.html
+++ b/web/templates/ext/agencylogin.html
@@ -9,3 +9,7 @@
 {%block username%}<input class="text" type="text" name="user_name" value="{{ username }}"/>{%endblock%}
 
 {%block password%}<input class="text" type="password" name="password" value="{{ password }}"/>{%endblock%}
+
+{%block hint1%}<h4>Same old bypass.</h4>{%endblock%}
+{%block hint2%}<h4>You might need to write a script.</h4>{%endblock%}
+{%block hint3%}<h4>There should be a video somewhere...</h4>{%endblock%}
