--- a/web/templates/ext/login.html
+++ b/web/templates/ext/login.html
@@ -7,3 +7,7 @@
 {%block username%}<input class="text" type="text" name="username" value="{{ username }}"/>{%endblock%}
 
 {%block password%}<input class="text" type="password" name="password" value="{{ password }}"/>{%endblock%}
+
+{%block hint1%}<h4>Another chance to write a script!</h4>{%endblock%}
+{%block hint2%}<h4>This time it's not relational.</h4>{%endblock%}
+{%block hint3%}<h4>Mongo mango same thing.</h4>{%endblock%}
