--- a/web/templates/ext/ramenshop.html
+++ b/web/templates/ext/ramenshop.html
@@ -20,8 +20,9 @@
 
 {%block title%}<div id="header" style="color: darkorange;">Welcome!</div>{%endblock%}
 {%block header%}<h4 id="feedback" style="color:peru;">{{ feedback }}</h4>{%endblock%}
+
+{%block navtitle%}<span class="profession">XML Based</span>{%endblock%}
    
-        
 {%block name%}<div style="font-size: 25px;margin: 10px;color: cornflowerblue;">Order Form</div>{%endblock%}
 {%block output%}<h3 style="color:black">Please place your order:</h3><br>{%endblock%}
 
@@ -45,3 +46,6 @@
 
 {%block form%} {%endblock%}
 
+{%block hint1%}<h3>Can you spot any changes in the page after submission?</h3>{%endblock%}
+{%block hint2%}<h3>What are external entities and how can we use them?</h3>{%endblock%}
+{%block hint3%}<h3>Do you know of php filters?</h3>{%endblock%}
