--- a/web/templates/ext/spacebase.html
+++ b/web/templates/ext/spacebase.html
@@ -11,3 +11,8 @@
 
 {%block form%} {%endblock%}
 
+{%block hint1%}
+    <img style="max-width:100%;max-height:100%;" src="../../static/assets/XMLexample.png">
+{%endblock%}
+{%block hint2%}<h3>X marks the path!</h3>{%endblock%}
+{%block hint3%}<h3>Gotta write another script.</h3>{%endblock%}
