--- a/web/static/stylesheets/sidebar/style.css
+++ b/web/static/stylesheets/sidebar/style.css
@@ -65,7 +65,6 @@ body.dark{
 .sidebar li{
     height: 50px;
     list-style: none;
-    display: flex;
     align-items: center;
     margin-top: 10px;
 }
@@ -234,6 +233,7 @@ body.dark .sidebar li a:hover .text{
     position: relative;
     transition: var(--tran-05);
     margin-bottom: 50px;
+    display: flex;
 }
 
 .menu-bar .mode .sun-moon{
@@ -320,3 +320,63 @@ body.dark .home .text{
     color: var(--text-color);
     
 }
+
+.nav-link {
+    display: none;
+}
+
+.modal-bg {
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, .7);
+    position: absolute;
+    top: 0;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+
+}
+
+
+.modal-content {
+    margin: auto;
+    width: 400px;
+    height: 300px;
+    background-color:white;
+    display: grid;
+    grid-template-rows: 100px 1fr;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.modal-content .modal-header{
+    justify-content: center;
+    margin: auto;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    width: 100%;
+    padding-left: 40%;
+    
+}
+
+.modal-content .modal-close{
+    grid-row-start: 1;
+    grid-row-end: 2;
+    float: right;
+    font-size: 18px;
+    border: 0;
+    outline: 0;
+    border-radius: 50%;
+}
+
+.modal-content .modal-body{
+    width: 350px;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    overflow-wrap: anywhere;
+}
+
