--- a/web/templates/ext/naturehome.html
+++ b/web/templates/ext/naturehome.html
@@ -15,3 +15,8 @@
 <input class="button" type="submit" value="Submit"><br><br>
 
 {%block logout%}{%endblock%}
+
+
+{%block hint1%}<h3>What other HTML tags are there?</h3>{%endblock%}
+{%block hint2%}<h3>-</h3>{%endblock%}
+{%block hint3%}<h3>-</h3>{%endblock%}
