--- a/web/templates/main/index.html
+++ b/web/templates/main/index.html
@@ -22,6 +22,7 @@
 
         <!-- GLOBAL MANDATORY STYLES -->
         <link href="http://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!-- <link href="{{ url_for('static', filename='stylesheets/main/simple-line-icons.css') }}" rel="stylesheet"> -->
         <link href="{{ url_for('static', filename='stylesheets/main/vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
 
@@ -30,10 +31,8 @@
         <link href="{{ url_for('static', filename='stylesheets/main/vendor/swiper/css/swiper.min.css') }}" rel="stylesheet">
         <link href="{{ url_for('static', filename='stylesheets/main/vendor/magnific-popup/magnific-popup.css') }}" rel="stylesheet">
 
-
         <!-- THEME STYLES -->
         <link href="{{ url_for('static', filename='stylesheets/main/layout.min.css') }}" rel="stylesheet">
-
 
         <!-- Favicon -->
         <link rel="shortcut icon" href="favicon.ico"/>
@@ -150,10 +149,7 @@
         <!-- Service -->
         <div id="service">
           
-           
-
             <div class="bg-color-sky-light" data-auto-height="true">
-    
 
                 <div class="content-lg container">
                     <div class="row row-space-2 margin-b-4">
@@ -163,7 +159,8 @@
                                     <h3>SQL Injection</h3>
                                     <p class="margin-b-5">Chapter 1</p>
                                 </div>
-                                <a href="/SQL/login" class="content-wrapper-link"></a>    
+                                <!-- <a href="/SQL/login" class="content-wrapper-link"></a> -->
+                                <a data-modal="modal-1" class="modal-open content-wrapper-link"></a>        
                             </div>
                         </div>
                         <div class="col-sm-4 sm-margin-b-4">
@@ -172,7 +169,9 @@
                                     <h3>SQL Timing Attack (Blind Injection)</h3>
                                     <p class="margin-b-5">Chapter 2</p>
                                 </div>
-                                <a href="/SQL2/login" class="content-wrapper-link"></a>    
+                                <!-- <a href="/SQL2/login" class="content-wrapper-link"></a> -->
+                                <a data-modal="modal-2" class="modal-open content-wrapper-link"></a>        
+    
                             </div>
                         </div>
                         <div class="col-sm-4 sm-margin-b-4">
@@ -181,7 +180,9 @@
                                     <h3>NoSQL Injection</h3>
                                     <p class="margin-b-5">Chapter 3</p>
                                 </div>
-                                <a href="/noSQL" class="content-wrapper-link"></a>    
+                                <!-- <a href="/noSQL" class="content-wrapper-link"></a>     -->
+                                <a data-modal="modal-3" class="modal-open content-wrapper-link"></a>        
+
                             </div>
                         </div>
                     </div>
@@ -193,7 +194,9 @@
                                     <h3 class="color-white">XSS (Stored & Reflected)</h3>
                                     <p class="margin-b-5 color-white">Chapter 1</p>
                                 </div>
-                                <a href="/XSS/login" class="content-wrapper-link"></a>    
+                                <!-- <a href="/XSS/login" class="content-wrapper-link"></a>    -->
+                                <a data-modal="modal-4" class="modal-open content-wrapper-link"></a>        
+ 
                             </div>
                         </div>
                         <div class="col-sm-4 sm-margin-b-4">
@@ -202,7 +205,9 @@
                                     <h3 class="color-white">XSS with Content-Security-Policy (Low)</h3>
                                     <p class="margin-b-5 color-white">Chapter 2</p>
                                 </div>
-                                <a href="/XSS2" class="content-wrapper-link"></a>    
+                                <!-- <a href="/XSS2" class="content-wrapper-link"></a>     -->
+                                <a data-modal="modal-5" class="modal-open content-wrapper-link"></a>        
+
                             </div>
                         </div>
                         <div class="col-sm-4">
@@ -211,7 +216,9 @@
                                     <h3 class="color-white">XSS with Content-Security-Policy (High)</h3>
                                     <p class="color-white margin-b-5">Chapter 3</p>
                                 </div>
-                                <a href="/XSS3" class="content-wrapper-link"></a>    
+                                <!-- <a href="/XSS3" class="content-wrapper-link"></a>    -->
+                                <a data-modal="modal-6" class="modal-open content-wrapper-link"></a>        
+ 
                             </div>
                         </div>
                       
@@ -225,7 +232,9 @@
                                     <h3>XXE Injection</h3>
                                     <p class="margin-b-5">Chapter 1</p>
                                 </div>
-                                <a href="/XXE" class="content-wrapper-link"></a>    
+                                <!-- <a href="/XXE" class="content-wrapper-link"></a>     -->
+                                <a data-modal="modal-7" class="modal-open content-wrapper-link"></a>        
+
                             </div>
                         </div>
                         <div class="col-sm-4 sm-margin-b-4">
@@ -234,7 +243,9 @@
                                     <h3>XML Blind XPath Injection</h3>
                                     <p class="margin-b-5">Chapter 2</p>
                                 </div>
-                                <a href="/XML" class="content-wrapper-link"></a>    
+                                <!-- <a href="/XML" class="content-wrapper-link"></a>   -->
+                                <a data-modal="modal-8" class="modal-open content-wrapper-link"></a>        
+  
                             </div>
                         </div>
                         <div class="col-sm-4">
@@ -244,17 +255,169 @@
                                     <h3>Insecure Deserialization (Python)</h3>
                                     <p class="margin-b-5">Chapter 1</p>
                                 </div>
-                                <a href="/INSEC" class="content-wrapper-link"></a>    
+                                <!-- <a href="/INSEC" class="content-wrapper-link"></a>     -->
+                                <a data-modal="modal-9" class="modal-open content-wrapper-link"></a>        
+
                             </div>
                         </div>
                       
                     </div>
                     <!--// end row -->
-
                 </div>
+
+                 <!-- Modals -->
+                 
+                <div class="modal-bg" id="modal-1" data-backdrop="static" >
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button class="icon modal-close"><i class="material-icons" style="font-size: 16px;">close</i></button>
+                            <h2>SQL Injection</h2> 
+                        </div>
+                        <div class="modal-body">
+                            <h3>Objective: To gain access into the website without credentials.</h3>
+                        </div>
+                        <a href="/SQL/login" class="btn-theme btn-theme-md btn-white-bg" 
+                            style="border-bottom-right-radius: 10px; 
+                            border-bottom-left-radius: 10px;">Begin Challenge</a>
+
+                    </div>
+                </div>
+
+                <div class="modal-bg" id="modal-2" data-backdrop="static">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button class="icon modal-close"><i class="material-icons" style="font-size: 16px;">close</i></button>
+                            <h2>Time-Based Blind SQL Injection</h2>
+                        </div>
+                        <div class="modal-body">
+                            <h3>Objective: To exfiltrate data from the SQL database</h3>
+                        </div>
+                        <a href="/SQL2/login" class="btn-theme btn-theme-md btn-white-bg" 
+                                style="border-bottom-right-radius: 10px; 
+                                border-bottom-left-radius: 10px;">Begin Challenge</a>
+                    </div>
+                </div>
+
+                <div class="modal-bg" id="modal-3" data-backdrop="static">
+                    <div class="modal-content">
+                        <div class="modal-header"> 
+                            <button class="icon modal-close"><i class="material-icons" style="font-size: 16px;">close</i></button>
+                            <h2>NoSQL Injection</h2>
+                        </div>
+                        <div class="modal-body">
+                            <h3>Objective: To extract the password of the given user 'admin'</h3>
+                        </div>
+                        <a href="/noSQL" class="btn-theme btn-theme-md btn-white-bg" 
+                            style="border-bottom-right-radius: 10px; 
+                            border-bottom-left-radius: 10px;">Begin Challenge</a>
+                    </div>
+                </div>
+
+                <div class="modal-bg" id="modal-4" data-backdrop="static">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button class="icon modal-close"><i class="material-icons" style="font-size: 16px;">close</i></button>
+                            <h2>Cross-site Scripting (Stored & Reflected) </h2>
+                        </div>
+                        <div class="modal-body">
+                            <h3>Objective: To retrieve the token of user 'admin' and to access the restricted page: 
+                                http://localhost:5000/XSS/admin</h3>    
+                        </div>
+                        <a href="/XSS/login" class="btn-theme btn-theme-md btn-white-bg" 
+                                style="border-bottom-right-radius: 10px; 
+                                border-bottom-left-radius: 10px;">Begin Challenge</a>
+                    </div>
+                </div>
+
+                <div class="modal-bg" id="modal-5" data-backdrop="static">
+                    <div class="modal-content">
+                        <div class="modal-header"> 
+                            <button class="icon modal-close"><i class="material-icons" style="font-size: 16px;">close</i></button>
+                            <h2>Cross-site Scripting with Content-Security-Policy (Low)</h2>
+                        </div>
+                        <div class="modal-body">
+                            <h3>Objective: 
+                                To inject a malign script that would redirect users to the malicious link: 
+                                http://localhost/CTF/attacker/base.html</h3>
+                        </div>
+                        <a href="/XSS2" class="btn-theme btn-theme-md btn-white-bg" 
+                            style="border-bottom-right-radius: 10px; 
+                            border-bottom-left-radius: 10px;">Begin Challenge</a>
+                    </div>
+                </div>
+
+                <div class="modal-bg" id="modal-6" data-backdrop="static">
+                    <div class="modal-content">
+                        <div class="modal-header"> 
+                            <button class="icon modal-close"><i class="material-icons" style="font-size: 16px;">close</i></button>
+                            <h2>Cross-site Scripting with Content-Security-Policy (High)</h2>
+                        </div>
+                        <div class="modal-body">
+                            <h3>Objective:
+                                To inject a malign script that would redirect users to the malicious link:
+                                http://localhost:5000/XSS3/flag</h3>
+                        </div>
+                            <a href="/XSS3" class="btn-theme btn-theme-md btn-white-bg" 
+                                style="border-bottom-right-radius: 10px; 
+                                border-bottom-left-radius: 10px;">Begin Challenge</a>
+                        </div>
+                </div>
+
+                <div class="modal-bg" id="modal-7" data-backdrop="static">
+                    <div class="modal-content">
+                        <div class="modal-header"> 
+                            <button class="icon modal-close"><i class="material-icons" style="font-size: 16px;">close</i></button>
+                            <h2>XML External Entities Injection</h2>
+                        </div>
+                        <div class="modal-body">
+                            <h3>Objective:
+                                To extract the source code of 'flag.php' which can be found at the route: http://localhost:5000/XXE/flag</h3>
+                        </div>
+                            <a href="/XXE" class="btn-theme btn-theme-md btn-white-bg" 
+                                style="border-bottom-right-radius: 10px; 
+                                border-bottom-left-radius: 10px;">Begin Challenge</a>
+                        </div>
+                </div>
+
+                <div class="modal-bg" id="modal-8" data-backdrop="static">
+                    <div class="modal-content">
+                        <div class="modal-header"> 
+                            <button class="icon modal-close"><i class="material-icons" style="font-size: 16px;">close</i></button>
+                            <h2>XML Blind XPath Injection</h2>
+                        </div>
+                        <div class="modal-body">
+                            <h3>Objective:
+                                To extract the flag embedded in the xml file.</h3>
+                        </div>
+                            <a href="/XML" class="btn-theme btn-theme-md btn-white-bg" 
+                                style="border-bottom-right-radius: 10px; 
+                                border-bottom-left-radius: 10px;">Begin Challenge</a>
+                        </div>
+                </div>
+
+                <div class="modal-bg" id="modal-9" data-backdrop="static">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button class="icon modal-close"><i class="material-icons" style="font-size: 16px;">close</i></button>
+                            <h2>Insecure Deserialization (Python) </h2>
+                        </div>
+                        <div class="modal-body">
+                            <h3>Objective:
+                                To gain Remote Code Execution (RCE)</h3>
+                        </div>
+                            <a href="/INSEC" class="btn-theme btn-theme-md btn-white-bg" 
+                            style="border-bottom-right-radius: 10px; 
+                            border-bottom-left-radius: 10px;">Begin Challenge</a> 
+                        </div>
+                </div>
+
+                <!-- End Modals -->
             </div>
+
+           
         </div>
         <!-- End Service -->
+
 
         <!-- Promo Banner -->
         <div class="promo-banner">
@@ -459,6 +622,7 @@
         <script src="../../static/stylesheets/main/vendor/js/components/maginific-popup.min.js" type="text/javascript"></script>
         <script src="../../static/stylesheets/main/vendor/js/components/masonry.min.js" type="text/javascript"></script>
         <script src="../../static/stylesheets/main/vendor/js/components/gmap.min.js" type="text/javascript"></script>
+        <script src="../../static/scripts/modal.js"></script>  
 
     </body>
     <!-- END BODY -->
