--- a/web/templates/space/base.html
+++ b/web/templates/space/base.html
@@ -20,6 +20,10 @@
     <script src="{{ url_for('static', filename='scripts/sidebar.js') }}"></script>  
 
 
+    <script src="{{ url_for('static', filename='scripts/hints.js') }}"></script>  
+    <script src="{{ url_for('static', filename='scripts/modal.js') }}"></script>  
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     
     <!--<title>Dashboard Sidebar Menu</title>--> 
 
@@ -48,7 +52,7 @@
 
                 <div class="text logo-text">
                     <span class="name">CTF4Beginners</span>
-                    <span class="profession">Injection Based</span>
+                    <span class="profession">XML Based</span>
                 </div>
             </div>
 
@@ -61,28 +65,28 @@
                 <li class="search-box">
                     <!-- <i class='bx bx-search icon'></i>
                     <input type="text" placeholder="Search..."> -->
-                    <a href="#">
+                    <a class="hint-btn">
                         <i class='bx bx-search icon' ></i>
                         <span class="text nav-text">Get a Hint!</span>
                     </a>
                 </li>
 
-                    <li class="nav-link">
-                        <a href="#">
+                    <li class="nav-link" id="hint-1">
+                        <a data-modal="modal-1" class="modal-open">      
                             <i class='bx bx-bell icon' ></i>
                             <span class="text nav-text">Hint 1</span>
                         </a>
                     </li>
 
-                    <li class="nav-link">
-                        <a href="#">
+                    <li class="nav-link" id="hint-2">
+                        <a data-modal="modal-2" class="modal-open">      
                             <i class='bx bx-bell icon' ></i>
                             <span class="text nav-text">Hint 2</span>
                         </a>
                     </li>
 
-                    <li class="nav-link">
-                        <a href="#">
+                    <li class="nav-link" id="hint-3">
+                        <a data-modal="modal-3" class="modal-open">
                             <i class='bx bx-bell icon' ></i>
                             <span class="text nav-text">Hint 3</span>
                         </a>
@@ -159,7 +163,43 @@
 
     </section>
 
+    {%block modals%} 
+	<div class="modal-bg" id="modal-1" data-backdrop="static" >
+        <div class="modal-content">
+            <div class="modal-header">
+                <button class="icon modal-close"><i class="material-icons" style="font-size: 16px;">close</i></button>
+                <h2>Hint 1</h2> 
+            </div>
+            <div class="modal-body">
+                {%block hint1%}<h3>Pickle rick approves!</h3>{%endblock%}
+            </div>
+        </div>
+    </div>
 
+    <div class="modal-bg" id="modal-2" data-backdrop="static">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button class="icon modal-close"><i class="material-icons" style="font-size: 16px;">close</i></button>
+                <h2>Hint 2</h2>
+            </div>
+            <div class="modal-body">
+                {%block hint2%}<h3>What kind of malicious input would allow RCE?</h3>{%endblock%}
+            </div>
+        </div>
+    </div>
+
+    <div class="modal-bg" id="modal-3" data-backdrop="static">
+        <div class="modal-content">
+            <div class="modal-header"> 
+                <button class="icon modal-close"><i class="material-icons" style="font-size: 16px;">close</i></button>
+                <h2>Hint 3</h2>
+            </div>
+            <div class="modal-body">
+                {%block hint3%}<h3>-</h3>{%endblock%}
+            </div>
+        </div>
+    </div>    
+    {%endblock%}
 
 </body>
 </html>
