--- a/web/templates/nature/base.html
+++ b/web/templates/nature/base.html
@@ -99,7 +99,7 @@
 		<div class="header">
             {%block title%}<div id="header">Hello, {{ username }}</div>{%endblock%}
             <form method="post">
-                <input type="hidden" name="user_name" value="{{ username }}">
+                <!-- <input type="hidden" name="user_name" value="{{ username }}"> -->
                 <input class="button reload" name="refresh" type="submit" value="Reload"><br><br>
             </form>
         </div>
